# TKY2JGD

./: README.md  download-tky2jgd-par.bash  pyproject.toml  tky2jgd.py
.github/workflows/: main.yaml
tests/: test_tky2jgd.py
tky2jgd/: __init__.py  tky2jgd.py
