[tool.poetry]
name = "tky2jgd"
version = "0.1.0"
description = ""
authors = ["TAKAHASHI Shuuji <shuuji3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
