[tool.poetry]
name = "tky2jgd"
version = "0.1.0"
description = "Python port of TKY2JGD to transform coordinates from Tokyo Datum (EPSG:4301) to JGD2000 (EPSG:4612)"
authors = ["TAKAHASHI Shuuji <shuuji3@gmail.com>"]
maintainers = ["TAKAHASHI Shuuji <shuuji3@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/shuuji3/TKY2JGD"
include = ["data/"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
